--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(journal)
 set(CMAKE_CXX_STANDARD 17)
 
 
-add_executable(journal src/main.cc core/entry.cc)
+add_executable(journal src/main.cc core/entry.cc core/display.cc)
 
 target_include_directories(journal PRIVATE include )
 
